--- a/wp-content/themes/mc2015/lang/fr_FR.po
+++ b/wp-content/themes/mc2015/lang/fr_FR.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MC2015\n"
 "POT-Creation-Date: 2014-12-11 15:39-0500\n"
-"PO-Revision-Date: 2014-12-11 15:42-0500\n"
-"Last-Translator: Carlos Sosa <carlos@8manos.com>\n"
+"PO-Revision-Date: 2014-12-19 13:47-0500\n"
+"Last-Translator: 8manos i18n <i18n@8manos.com>\n"
 "Language-Team: 8manos l18n <l18n@8manos.com>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.4\n"
+"X-Generator: Poedit 1.6.11\n"
 "X-Poedit-Basepath: ../\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Poedit-KeywordsList: __;_e\n"
@@ -76,7 +76,7 @@ msgstr "Liste"
 
 #: page-artists.php:21 ../mc2015/page-artists.php:21
 msgid "View artist"
-msgstr "Vue artiste"
+msgstr "Voir"
 
 #: single-artist.php:53 ../mc2015/single-artist.php:53
 msgid "Download CV"
@@ -156,7 +156,7 @@ msgstr ""
 
 #: ../mcg/functions.php:367
 msgid "View exhibition"
-msgstr "Vue exposition"
+msgstr "Voir"
 
 #: ../mcg/functions.php:378
 msgid "Site settings"
